Finished personal assignment
