# routes/index.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/swagger', require('./swagger'));
-router.use('/contacts', require('./contacts'));
+router.use('/users', require('./users'));
+router.use('/workoutSessions', require('./workoutSessions'));
 
 module.exports = router;
